--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,13 @@ ul li{
     margin-bottom: 50px;
 }
 .bg-img{
+    margin: 0 0 0 0 !important;
+    padding: 0 0 0 0 !important;
+    width: 100%;
+    height: auto;
+    max-width: 300px;
+    max-height: 300px;
+}
+.centered{
     
-    background-size: cover;
 }
