--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body{
 ul li{
     display: inline !important; 
 }
-.fab{
+.fab2{
     color: #ffffff;
 }
 .fab1{
@@ -16,18 +16,10 @@ ul li{
 .fas{
     color: #ffffff;
 }
-.title{
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    align-content: stretch;
-}
+
 .margint{
     margin-top: 50px;
-    justify-content: center;
-    align-content: center;
+    
 }
 .marginb{
     margin-bottom: 50px;
@@ -39,6 +31,8 @@ ul li{
 .centered{
     background-image: url('img/jane.jpg');
     background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
 
 }
 .card-bg{
@@ -46,6 +40,10 @@ ul li{
     color: #ffffff;
 }
 .post-thumb{
-    max-width: 80px;
-    max-height: 80px;
+    max-width: 50px;
+    max-height: 50px;
+}
+.titolo{
+    text-align: center;
+    font-weight: bold;
 }
